[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/TankAssets/towerDefense_tile251.png" type="Texture" id=1]
[ext_resource path="res://Elements/Projectile.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 42.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 42.0

[node name="Projectile" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 2 )

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
